--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         "sass": "^1.80.3",
         "tailwindcss": "^3.4.14",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "alpinejs": "^3.14.3"
     }
 }
