--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "alpinejs": "^3.14.3"
+        "alpinejs": "^3.14.3",
+        "bun": "^1.1.36"
     }
 }
