--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "livewire/livewire": "^3.5",
         "livewire/volt": "^1.0",
         "rappasoft/laravel-livewire-tables": "^3.5",
-        "spatie/laravel-activitylog": "^4.8"
+        "spatie/image": "^3.8",
+        "spatie/laravel-activitylog": "^4.8",
+        "spatie/laravel-medialibrary": "^11.12"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
