--- a/composer.json
+++ b/composer.json
@@ -9,18 +9,14 @@
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
-        "livewire/volt": "^1.0",
         "rappasoft/laravel-livewire-tables": "^3.5",
         "spatie/image": "^3.8",
         "spatie/laravel-activitylog": "^4.8",
-        "spatie/laravel-medialibrary": "^11.12"
+        "spatie/laravel-medialibrary": "^11.12",
+        "spatie/laravel-responsecache": "^7.6"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
-        "fakerphp/faker": "^1.23",
-        "laravel/pail": "^1.1",
-        "laravel/pint": "^1.13",
-        "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
         "phpunit/phpunit": "^11.0.1"
