--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": "^8.4",
         "fakerphp/faker": "^1.24",
-        "laravel/framework": "^11.9",
+        "laravel/framework": "12.1.1.0",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
         "rappasoft/laravel-livewire-tables": "^3.5",
